[gd_scene load_steps=6 format=3 uid="uid://smutpl3j4mml"]

[ext_resource type="Script" path="res://pedana.gd" id="1_meddu"]
[ext_resource type="Texture2D" uid="uid://cph162th5vbs1" path="res://icon.svg" id="2_k7w1k"]
[ext_resource type="PackedScene" uid="uid://bawshwc6vy2s6" path="res://Chara.tscn" id="3_huafg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0gyp6"]
size = Vector2(329.5, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnio8"]
size = Vector2(328, 28)

[node name="Pedana" type="Node2D"]

[node name="EndPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(179, -154)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(317, 112)
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-147, 54)
shape = SubResource("RectangleShape2D_0gyp6")

[node name="Node2D" parent="." instance=ExtResource("3_huafg")]
position = Vector2(126, 145)
collision_layer = 2

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
position = Vector2(-5, 179)
collision_mask = 0
script = ExtResource("1_meddu")

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody2D"]
position = Vector2(178, 63)
scale = Vector2(2.53906, 0.1875)
texture = ExtResource("2_k7w1k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
position = Vector2(182, 68)
shape = SubResource("RectangleShape2D_pnio8")

[connection signal="body_entered" from="Area2D" to="AnimatableBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="AnimatableBody2D" method="_on_area_2d_body_exited"]
